# PingPongGame

./: .gitignore  CMakeLists.txt  main.cpp
include/: Ball.h  Drawer.h  Entity.h  Game.h  IPlayer.h  LocalPlayer.h  RemotePlayer.h  Server.h
include/Entity/: Entity.h
include/Player/: IPlayer.h  LocalPlayer.h  Player.h  RemotePlayer.h
include/Server/: ActiveServer.h  IServer.h  PassiveServer.h  Server.h  ServerData.h  ServerState.h
src/: Drawer.cpp  Game.cpp  main.cpp
src/Player/: LocalPlayer.cpp  Player.cpp  RemotePlayer.cpp
src/Server/: Server.cpp
